fixed content overlap handheld menu

--- a/style.css
+++ b/style.css
@@ -519,7 +519,7 @@ Handheld Menu
  background-color:transparent;
  box-shadow: none;
  position: relative!important;
- z-index: 100!important;
+ z-index: 2000!important;
 }
 
 .menu-toggle:hover{
@@ -527,12 +527,14 @@ Handheld Menu
 }
 
 .handheld-navigation{
+ position: relative;
  text-align: left;
  background-color: rgb(60,60,60);
  width: 300px!important;
  height: 1500px;
  margin-top: -100px;
  padding-top: 120px;
+ z-index: 1000;
 }
 
 .myfixed .menu-toggle{
@@ -583,6 +585,9 @@ body.page-template-template-fullwidth-php div.headerwrapper h1{
  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
+.page-template-template-fullwidth-shift-upwards-php #masthead{
+ z-index: auto;
+}
 
 /*== mystickynav ==*/
 
